# dddmisc

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  tox.ini  workspace.toml
bases/d3m/core/: __init__.py  abstractions.py  helpers.py  message.py  types.py
bases/d3m/domain/: __init__.py  bases.py  collection.py  command.py  entities.py  event.py  exceptions.py
bases/d3m/hc/: __init__.py  collection.py  command_handler.py  conditions.py  subscribe_config.py
bases/d3m/messagebus/: __init__.py  collection.py  context.py  event_manager.py  message.py  messagebus.py
bases/d3m/uow/: __init__.py  abstractions.py  uow.py
projects/dddmisc-core/: pyproject.toml
projects/dddmisc-domain/: pyproject.toml
projects/dddmisc-handlers-collection/: pyproject.toml
projects/dddmisc-messagebus/: pyproject.toml
projects/dddmisc-uow/: LICENSE  pyproject.toml
test/bases/d3m/core/: test_abstractions.py  test_helpers.py  test_jsondict.py  test_message.py  test_types.py
test/bases/d3m/domain/: conftest.py  test_collection.py  test_command.py  test_entities.py  test_events.py  test_exceptions.py
test/bases/d3m/hc/: conftest.py  test_collection.py  test_command_handler.py  test_conditions.py  test_subscribe_config.py
test/bases/d3m/messagebus/: conftest.py  test_collection.py  test_conftest.py  test_context.py  test_messagebus.py
test/bases/d3m/uow/: fakes.py  test_uow_builder.py
