[tool.poetry]
name = "dddmisc-domain"
version = "0.5.0"
description = "This package provides implementation domain's objects classes"
authors = ['Vladislav Vorobyov <vladislav.vorobyov@gmail.com>']
license = "MIT"

packages = [
    { include = "d3m/domain", from = "../../bases" },
]

[tool.poetry.dependencies]
python = "^3.10"
dddmisc-core = "~0.6.0"
pydantic = "^2.0.0"

[tool.poetry.extras]
pydantic = ["pydantic"]

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
