[tool.poetry]
name = "dddmisc-unit-of-work"
version = "0.3.1"
description = "This package provides the implementation pattern 'unit of work'"
authors = ['Vladislav Vorobyov <vladislav.vorobyov@gmail.com>']
homepage = "https://dddmisc.github.io/dddmisc-docs/"
repository = "https://github.com/dddmisc/dddmisc"
license = "MIT"
readme = "README.md"

packages = [
    { include = "d3m/uow", from = "../../bases" },
]

[tool.poetry.dependencies]
python = "^3.10"
dddmisc-core = "~0.6.0"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
